<?xml version="1.0"?>
<package>
  <name>thermaleye_msgs</name>
  <version>0.0.0</version>
  <description>The thermaleye_msgs package</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <author     email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>